tests/snapshots/snapshots__current_with_following_3_months_2026.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│             COMPACT CALENDAR 2026              │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│             ┌──────────────┬───────────────────┤
│W01 January  │ 29   30   31 │ 01   02   03   04 │
│             ├──────────────┘                   │
│W02          │ 05   06   07   08   09   10   11 │
│W03          │ 12   13   14   15   16   17   18 │
│W04          │ 19   20   21   22   23   24   25 │
│             │                             ┌────┤
│W05 February │ 26   27   28   29   30   31 │ 01 │
│             ├─────────────────────────────┘    │
│W06          │ 02   03   04   05   06   07   08 │
│W07          │ 09   10   11   12   13   14   15 │
│W08          │ 16   17   18   19   20   21   22 │
│             │                             ┌────┤
│W09 March    │ 23   24   25   26   27   28 │ 01 │
│             ├─────────────────────────────┘    │
│W10          │ 02   03   04   05   06   07   08 │
│W11          │ 09   10   11   12   13   14   15 │
│W12          │ 16   17   18   19   20   21   22 │
│W13          │ 23   24   25   26   27   28   29 │
│             │         ┌────────────────────────┤
│W14 April    │ 30   31 │ 01   02   03   04   05 │
│             ├─────────┘                        │
│W15          │ 06   07   08   09   10   11   12 │
│W16          │ 13   14   15   16   17   18   19 │
│W17          │ 20   21   22   23   24   25   26 │
│             │                   ┌──────────────┤
│W18 May      │ 27   28   29   30 │ 01   02   03 │
└─────────────┴───────────────────┴──────────────┘
