tests/snapshots/snapshots__quarters_2023.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│             COMPACT CALENDAR 2023              │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│             ┌─────────────────────────────┬────┤
│W01 January  │ 26   27   28   29   30   31 │ 01 │01/01 to 03/31 - Q1 - Planning Phase
│             ├─────────────────────────────┘    │
│W02          │ 02   03   04   05   06   07   08 │
│W03          │ 09   10   11   12   13   14   15 │
│W04          │ 16   17   18   19   20   21   22 │
│W05          │ 23   24   25   26   27   28   29 │
│             │         ┌────────────────────────┤
│W06 February │ 30   31 │ 01   02   03   04   05 │
│             ├─────────┘                        │
│W07          │ 06   07   08   09   10   11   12 │
│W08          │ 13   14   15   16   17   18   19 │
│W09          │ 20   21   22   23   24   25   26 │
│             │         ┌────────────────────────┤
│W10 March    │ 27   28 │ 01   02   03   04   05 │
│             ├─────────┘                        │
│W11          │ 06   07   08   09   10   11   12 │
│W12          │ 13   14   15   16   17   18   19 │
│W13          │ 20   21   22   23   24   25   26 │
│             │                        ┌─────────┤
│W14 April    │ 27   28   29   30   31 │ 01   02 │03/31 - Q1 Review, 04/01 to 06/30 - Q2 - Development Phase
│             ├────────────────────────┘         │
│W15          │ 03   04   05   06   07   08   09 │
│W16          │ 10   11   12   13   14   15   16 │
│W17          │ 17   18   19   20   21   22   23 │
│W18          │ 24   25   26   27   28   29   30 │
│             ├──────────────────────────────────┤
│W19 May      │ 01   02   03   04   05   06   07 │
│W20          │ 08   09   10   11   12   13   14 │
│W21          │ 15   16   17   18   19   20   21 │
│W22          │ 22   23   24   25   26   27   28 │
│             │              ┌───────────────────┤
│W23 June     │ 29   30   31 │ 01   02   03   04 │
│             ├──────────────┘                   │
│W24          │ 05   06   07   08   09   10   11 │
│W25          │ 12   13   14   15   16   17   18 │
│W26          │ 19   20   21   22   23   24   25 │
│             │                        ┌─────────┤
│W27 July     │ 26   27   28   29   30 │ 01   02 │06/30 - Q2 Review, 07/01 to 09/30 - Q3 - Testing Phase
│             ├────────────────────────┘         │
│W28          │ 03   04   05   06   07   08   09 │
│W29          │ 10   11   12   13   14   15   16 │
│W30          │ 17   18   19   20   21   22   23 │
│W31          │ 24   25   26   27   28   29   30 │
│             │    ┌─────────────────────────────┤
│W32 August   │ 31 │ 01   02   03   04   05   06 │
│             ├────┘                             │
│W33          │ 07   08   09   10   11   12   13 │
│W34          │ 14   15   16   17   18   19   20 │
│W35          │ 21   22   23   24   25   26   27 │
│             │                   ┌──────────────┤
│W36 September│ 28   29   30   31 │ 01   02   03 │
│             ├───────────────────┘              │
│W37          │ 04   05   06   07   08   09   10 │
│W38          │ 11   12   13   14   15   16   17 │
│W39          │ 18   19   20   21   22   23   24 │
│             │                             ┌────┤
│W40 October  │ 25   26   27   28   29   30 │ 01 │09/30 - Q3 Review, 10/01 to 12/31 - Q4 - Release Phase
│             ├─────────────────────────────┘    │
│W41          │ 02   03   04   05   06   07   08 │
│W42          │ 09   10   11   12   13   14   15 │
│W43          │ 16   17   18   19   20   21   22 │
│W44          │ 23   24   25   26   27   28   29 │
│             │         ┌────────────────────────┤
│W45 November │ 30   31 │ 01   02   03   04   05 │
│             ├─────────┘                        │
│W46          │ 06   07   08   09   10   11   12 │
│W47          │ 13   14   15   16   17   18   19 │
│W48          │ 20   21   22   23   24   25   26 │
│             │                   ┌──────────────┤
│W49 December │ 27   28   29   30 │ 01   02   03 │
│             ├───────────────────┘              │
│W50          │ 04   05   06   07   08   09   10 │
│W51          │ 11   12   13   14   15   16   17 │
│W52          │ 18   19   20   21   22   23   24 │
│W53          │ 25   26   27   28   29   30   31 │12/31 - Q4 Review
└─────────────┴──────────────────────────────────┘
