tests/snapshots/snapshots__quarters_2024.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│             COMPACT CALENDAR 2024              │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│W01 January  │ 01   02   03   04   05   06   07 │
│W02          │ 08   09   10   11   12   13   14 │
│W03          │ 15   16   17   18   19   20   21 │
│W04          │ 22   23   24   25   26   27   28 │
│             │              ┌───────────────────┤
│W05 February │ 29   30   31 │ 01   02   03   04 │
│             ├──────────────┘                   │
│W06          │ 05   06   07   08   09   10   11 │
│W07          │ 12   13   14   15   16   17   18 │
│W08          │ 19   20   21   22   23   24   25 │
│             │                   ┌──────────────┤
│W09 March    │ 26   27   28   29 │ 01   02   03 │
│             ├───────────────────┘              │
│W10          │ 04   05   06   07   08   09   10 │
│W11          │ 11   12   13   14   15   16   17 │
│W12          │ 18   19   20   21   22   23   24 │
│W13          │ 25   26   27   28   29   30   31 │
│             ├──────────────────────────────────┤
│W14 April    │ 01   02   03   04   05   06   07 │
│W15          │ 08   09   10   11   12   13   14 │
│W16          │ 15   16   17   18   19   20   21 │
│W17          │ 22   23   24   25   26   27   28 │
│             │         ┌────────────────────────┤
│W18 May      │ 29   30 │ 01   02   03   04   05 │
│             ├─────────┘                        │
│W19          │ 06   07   08   09   10   11   12 │
│W20          │ 13   14   15   16   17   18   19 │
│W21          │ 20   21   22   23   24   25   26 │
│             │                        ┌─────────┤
│W22 June     │ 27   28   29   30   31 │ 01   02 │
│             ├────────────────────────┘         │
│W23          │ 03   04   05   06   07   08   09 │
│W24          │ 10   11   12   13   14   15   16 │
│W25          │ 17   18   19   20   21   22   23 │
│W26          │ 24   25   26   27   28   29   30 │
│             ├──────────────────────────────────┤
│W27 July     │ 01   02   03   04   05   06   07 │
│W28          │ 08   09   10   11   12   13   14 │
│W29          │ 15   16   17   18   19   20   21 │
│W30          │ 22   23   24   25   26   27   28 │
│             │              ┌───────────────────┤
│W31 August   │ 29   30   31 │ 01   02   03   04 │
│             ├──────────────┘                   │
│W32          │ 05   06   07   08   09   10   11 │
│W33          │ 12   13   14   15   16   17   18 │
│W34          │ 19   20   21   22   23   24   25 │
│             │                             ┌────┤
│W35 September│ 26   27   28   29   30   31 │ 01 │
│             ├─────────────────────────────┘    │
│W36          │ 02   03   04   05   06   07   08 │
│W37          │ 09   10   11   12   13   14   15 │
│W38          │ 16   17   18   19   20   21   22 │
│W39          │ 23   24   25   26   27   28   29 │
│             │    ┌─────────────────────────────┤
│W40 October  │ 30 │ 01   02   03   04   05   06 │
│             ├────┘                             │
│W41          │ 07   08   09   10   11   12   13 │
│W42          │ 14   15   16   17   18   19   20 │
│W43          │ 21   22   23   24   25   26   27 │
│             │                   ┌──────────────┤
│W44 November │ 28   29   30   31 │ 01   02   03 │
│             ├───────────────────┘              │
│W45          │ 04   05   06   07   08   09   10 │
│W46          │ 11   12   13   14   15   16   17 │
│W47          │ 18   19   20   21   22   23   24 │
│             │                             ┌────┤
│W48 December │ 25   26   27   28   29   30 │ 01 │
│             ├─────────────────────────────┘    │
│W49          │ 02   03   04   05   06   07   08 │
│W50          │ 09   10   11   12   13   14   15 │
│W51          │ 16   17   18   19   20   21   22 │
│W52          │ 23   24   25   26   27   28   29 │
│             │         ┌────────────────────────┤
│W53 January  │ 30   31 │ 01   02   03   04   05 │
└─────────────┴─────────┴────────────────────────┘
