tests/snapshots/snapshots__single_month_by_number_march_2026.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│                   COMPACT CALENDAR 2026        │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│             ┌─────────────────────────────┬────┤
│W01 March    │ 23   24   25   26   27   28 │ 01 │
│             ├─────────────────────────────┘    │
│W02          │ 02   03   04   05   06   07   08 │
│W03          │ 09   10   11   12   13   14   15 │
│W04          │ 16   17   18   19   20   21   22 │
│W05          │ 23   24   25   26   27   28   29 │
│             │         ┌────────────────────────┤
│W06 April    │ 30   31 │ 01   02   03   04   05 │
└─────────────┴─────────┴────────────────────────┘
