tests/snapshots/snapshots__single_month_december_2026.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│             COMPACT CALENDAR 2026              │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│             ┌────┬─────────────────────────────┤
│W01 December │ 30 │ 01   02   03   04   05   06 │
│             ├────┘                             │
│W02          │ 07   08   09   10   11   12   13 │
│W03          │ 14   15   16   17   18   19   20 │
│W04          │ 21   22   23   24   25   26   27 │
│             │                   ┌──────────────┤
│W05 January  │ 28   29   30   31 │ 01   02   03 │
└─────────────┴───────────────────┴──────────────┘
