tests/snapshots/snapshots__single_month_february_2024_leap_year.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│                   COMPACT CALENDAR 2024        │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│             ┌──────────────┬───────────────────┤
│W01 February │ 29   30   31 │ 01   02   03   04 │
│             ├──────────────┘                   │
│W02          │ 05   06   07   08   09   10   11 │
│W03          │ 12   13   14   15   16   17   18 │
│W04          │ 19   20   21   22   23   24   25 │
│             │                   ┌──────────────┤
│W05 March    │ 26   27   28   29 │ 01   02   03 │
└─────────────┴───────────────────┴──────────────┘
