tests/snapshots/snapshots__single_month_january_2026.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│             COMPACT CALENDAR 2026              │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│             ┌──────────────┬───────────────────┤
│W01 January  │ 29   30   31 │ 01   02   03   04 │
│             ├──────────────┘                   │
│W02          │ 05   06   07   08   09   10   11 │
│W03          │ 12   13   14   15   16   17   18 │
│W04          │ 19   20   21   22   23   24   25 │
│             │                             ┌────┤
│W05 February │ 26   27   28   29   30   31 │ 01 │
└─────────────┴─────────────────────────────┴────┘
