tests/snapshots/snapshots__single_month_with_events_march_2024.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│                   COMPACT CALENDAR 2024        │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│             ┌───────────────────┬──────────────┤
│W01 March    │ 26   27   28   29 │ 01   02   03 │
│             ├───────────────────┘              │
│W02          │ 04   05   06   07   08   09   10 │
│W03          │ 11   12   13   14   15   16   17 │03/15 - Project Alpha Deadline, 03/17 - St. Patrick's Day
│W04          │ 18   19   20   21   22   23   24 │
│W05          │ 25   26   27   28   29   30   31 │
└─────────────┴──────────────────────────────────┘
